tests/frontend/fail/three_behaviours.act
// This is wrong because we have two behviours with the same name
constructor of C
interface constructor(uint24 _x)

creates

  uint24 x := _x

behaviour increase of C
interface increase(uint24 new_x)

  storage
    x

  returns pre(x)

ensures

  post(x) >= pre(x)

behaviour increase of C
interface increase2(uint24 new_x)

storage
    x

  returns new_x

ensures

  post(x) >= pre(x)

behaviour increase of C
interface increase2(uint24 new_x)

storage
    x

  returns new_x

ensures

  post(x) >= pre(x)

